g5_defconfig: Enable MSM_POWER

--- a/arch/arm64/configs/cyanogenmod_h850_defconfig
+++ b/arch/arm64/configs/cyanogenmod_h850_defconfig
@@ -4087,7 +4087,7 @@ CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_MSM_BAM_DMUX is not set
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
-# CONFIG_MSM_POWER is not set
+CONFIG_MSM_POWER=y
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 # CONFIG_MSM_QBT1000 is not set
 CONFIG_MSM_PACMAN=y
