--- a/arch/arm64/configs/cyanogenmod_h830_defconfig
+++ b/arch/arm64/configs/cyanogenmod_h830_defconfig
@@ -1027,11 +1027,8 @@ CONFIG_BT=y
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 CONFIG_MSM_BT_POWER=y
+# CONFIG_BTFM_SLIM is not set
 CONFIG_MSM_BT_BLUESLEEP=y
-
-#
-# BROADCOM V4L2 BT/FM device drivers
-#
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
@@ -4253,6 +4250,7 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT23=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 CONFIG_EXT4_FS_SECURITY=y
+# CONFIG_EXT4_ENCRYPTION is not set
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
