--- a/project.config
+++ b/project.config
@@ -2,3 +2,10 @@
 	inheritFrom = All-Projects
 [submit]
 	action = rebase if necessary
+[access "refs/heads/*"]
+	forgeAuthor = group LG G5
+	forgeCommitter = group LG G5
+	push = group LG G5
+	label-Code-Review = -2..+2 group LG G5
+	label-Verified = -1..+1 group LG G5
+	submit = group LG G5
