--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -376,7 +376,7 @@ endif
 endif
 ifeq ($(CONFIG_ARCH_MSM8996),y)
   # Runtime PM
-  #DHDCFLAGS += -DDHD_PCIE_RUNTIMEPM -DMAX_IDLE_COUNT=11 -DCUSTOM_DHD_RUNTIME_MS=100
+  DHDCFLAGS += -DDHD_PCIE_RUNTIMEPM -DMAX_IDLE_COUNT=11 -DCUSTOM_DHD_RUNTIME_MS=100
   # Enable Dongle Isolation
   DHDCFLAGS += -DDONGLE_ENABLE_ISOLATION
 endif
