g5_defconfig: Enable wakelock garbage collection and log suspend time

--- a/arch/arm64/configs/cyanogenmod_h830_defconfig
+++ b/arch/arm64/configs/cyanogenmod_h830_defconfig
@@ -485,7 +485,7 @@ CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
-# CONFIG_PM_WAKELOCKS_GC is not set
+CONFIG_PM_WAKELOCKS_GC=y
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
@@ -493,7 +493,7 @@ CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_CPU_PM=y
-# CONFIG_SUSPEND_TIME is not set
+CONFIG_SUSPEND_TIME=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
